--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,4 @@
-VITE_API_URL = http://yxhe51918689.vicp.fun:47049
-VITE_DEFAULT_AVATAR = http://yxhe51918689.vicp.fun:47049/default.webp
-VITE_DEFAULT_BGIMG = http://yxhe51918689.vicp.fun:47049/bg2.webp
-VITE_PUBLIC_FOLDER = 'http://localhost:3000/'
-# VITE_PUBLIC_FOLDER = 'http://yxhe51918689.vicp.fun/'
+VITE_PUBLIC_FOLDER = http://localhost:5173/
+VITE_API_URL = http://localhost:3000/
+VITE_DEFAULT_AVATAR = ${VITE_PUBLIC_FOLDER}default.webp
+VITE_DEFAULT_BGIMG = ${VITE_PUBLIC_FOLDER}bg2.webp
